fio-bco (1.2.1) unstable; urgency=low

  * Bugfix of vault create account format
  * Rolling contract

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Mon, 15 Apr 2019 10:32:02 +0200

fio-bco (1.2.0) unstable; urgency=low

  * Integrate ledger instead of wall
  * Added proper purpose for self-signed cert
  * Updated copyright year to 2019
  * Bump github.com/gorilla/mux in /services/fio-bco-rest
  * Bump github.com/sirupsen/logrus in /services/fio-bco-import
  * Bump github.com/sirupsen/logrus in /services/fio-bco-rest
  * Bump github.com/jancajthaml-openbank/local-fs in /services/fio-bco-rest
  * Require config file presence for units
  * Bump github.com/jancajthaml-openbank/local-fs
  * Update config.yml
  * Start daemon after app starts

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sun, 14 Apr 2019 15:36:40 +0200

fio-bco (1.1.2) unstable; urgency=low

  * Blackbox-testing install and uninstall
  * Namespaced unit with configuration change watch
  * Bump github.com/json-iterator/go in /services/fio-bco-rest
  * Bump github.com/json-iterator/go in /services/fio-bco-unit
  * Bump github.com/sirupsen/logrus in /services/fio-bco-rest
  * Bump github.com/sirupsen/logrus in /services/fio-bco-unit
  * Bump github.com/jancajthaml-openbank/local-fs in /services/fio-bco-unit
  * Bump github.com/jancajthaml-openbank/local-fs in /services/fio-bco-rest
  * Bump github.com/sirupsen/logrus in /services/fio-bco-unit
  * Bump github.com/gorilla/mux in /services/fio-bco-rest
  * Added dependabot and sonar shield
  * Preinstall same version required by debian dependency in bbtest
  * Include security patches in zmq version constrain

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Mon, 18 Mar 2019 09:23:55 +0100

fio-bco (1.1.1) unstable; urgency=low

  * Fixing bbtest
  * Updated and cleaned up
  * Blackboxing token value

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sat, 9 Feb 2019 21:54:30 +0100

fio-bco (1.1.0) unstable; urgency=low

  * Better logging
  * Fixed linting issues